[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Asynchronous ssh-agent client"
documentation = "http://docs.rs/russh-agent"
edition = "2018"
homepage = "http://github.com/rustyhorde/russh-agent"
keywords = ["ssh", "ssh-agent", "tokio"]
license = "MIT/Apache-2.0"
name = "russh-agent"
readme = "README.md"
repository = "https://github.com/rustyhorde/russh-agent"
version = "0.1.0"

[dependencies]
byteorder = "1"
bytes = "0"
getset = "0"
slog = { version = "2", features = ["max_level_trace", "release_max_level_info"] }
slog-try = "0"
tokio = { version = "0", features = ["io-util", "macros", "rt-core", "stream", "sync", "time", "uds"] }

[dev-dependencies]
ed25519-dalek = "=1.0.0-pre.3"
hxdmp = "0"
lazy_static = "1"
rand = "0"
slog-term = "2"
slog-async = "2"
